# pcl

./: .gitignore  Cargo.toml  README.md  SPECIFICATION.md  analysis.md  docs.md
backend/: Cargo.toml  TEST_SUITE_SUMMARY.md
backend/src/: consensus.rs  crypto.rs  error.rs  lib.rs  main.rs  mempool.rs  network.rs  node.rs  storage.rs  transaction.rs
backend/tests/: integration.rs  leader_election.rs  mempool.rs  mod.rs  network_communication.rs  node_identity.rs  transaction_workflow.rs
consensus_node/: .gitignore  Cargo.toml
consensus_node/src/: data_structures.rs  lib.rs  main.rs  p2p.rs
consensus_simulator/: Cargo.toml
consensus_simulator/src/: main.rs  p2p.rs  transaction_generator.rs  user_manager.rs
extension/: CROSS_VALIDATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  backend-consensus-proof.js  background.js  comprehensive-test.js  content.js  debug-wallet.js  extension-test.js  final-complete-test.js  final-comprehensive-test.js  final-cross-validation-test.js  final-mempool-verification.js  final-screenshot-test.js  final-test.js  final-verification.js  final-wallet-consensus-test.js  fullscreen.html  fullscreen.js  manifest.json  offline-test.js  package.json  popup.html  popup.js  real-consensus-test.js  real-cross-validation-test.js  real-mempool-comprehensive-test.js  real-mempool-test.js  real-system-test.js  real-time-mempool-test.js  simple-backend-test.js  simple-test.js  test-backend.js  test-connectivity.js  test-puppeteer.js  test-simple.js  verify-implementation.js
extension/assets/: styles.css
extension/public/: index.html
extension/src/: App.vue  main.js
extension/src/assets/: styles.css
extension/src/router/: index.js
extension/src/store/: index.js
extension/src/views/: Dashboard.vue  NotFound.vue
peer_consensus_node/: Cargo.toml
peer_consensus_node/src/: consensus_logic.rs  data_structures.rs  db.rs  lib.rs  main.rs  network.rs
simulator/: Cargo.toml
simulator/src/: main.rs  metrics.rs  network.rs  node_spawner.rs  simulation.rs  transaction_generator.rs
