[package]
name = "pcl-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Networking
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "identify", "ping", "mdns"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Database
rocksdb = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Timing and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# XMBL Cubic DLT (placeholder - will need actual implementation)
# xmbl-cubic-dlt = { path = "../xmbl-cubic-dlt" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

# Benchmarks will be created later
# [[bench]]
# name = "transaction_throughput"
# harness = false

# [[bench]]
# name = "leader_election_latency"
# harness = false

# [[bench]]
# name = "mempool_performance"
# harness = false 