[package]
name = "consensus_node"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "0.21"
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
