[package]
name = "consensus_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
peer_consensus_node = { path = "../peer_consensus_node" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] } # For potential HTTP communication
chrono = "0.4" # For timestamps if needed in simulator logic
# Add other necessary dependencies for the simulator
