```toml
[package]
name = "consensus_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "yamux", "tcp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["serde"] } # For key generation
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] } # For command-line arguments

# Path dependency for consensus_node's data structures
consensus_node_lib = { path = "../consensus_node" }
```
