[package]
name = "peer_consensus_node"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "0.21"
libp2p = { version = "0.52", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
